[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/CollideArea.gd" type="Script" id=1]

[node name="CollideArea" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_CollideArea_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_CollideArea_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_CollideArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CollideArea_body_exited"]
